Hardcode Modeler input

--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -261,6 +261,9 @@
         "key": "simcore/services/dynamic/modeler/webserver",
         "version": "2.7.0",
         "label": "Modeler",
+        "inputs": {
+          "model_name": "DemoDec_Head_Modeler.smash"
+        },
         "position": {
           "x": 50,
           "y": 250
