Don't use capital letters in templated services!

--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -574,7 +574,7 @@
           "y": 550
         }
       },
-      "KemberViewerId": {
+      "kemberviewerid": {
         "key": "simcore/services/dynamic/kember-viewer",
         "version": "1.2.0",
         "label": "Kember Viewer",
