--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -233,7 +233,7 @@
       }
     }
   }, {
-    "projectUuid": "1d4269a4-0fbc-4bf9-9eb3-11356a46c45a",
+    "projectUuid": "DemoDecemberUUID",
     "name": "Demo December",
     "description": "",
     "notes": "",
