--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "projectUuid": "f8000108-2744-41e9-a1a7-f7d4f3a8f26b",
+    "projectUuid": "template-2744-41e9-a1a7-f7d4f3a8f26b",
     "name": "Colleen Clancy use cases",
     "description": "All use cases: 0D, 1D, 2D",
     "notes": "Empty",
@@ -10,7 +10,7 @@
     "creationDate": "2018-10-23T09:13:13.360Z",
     "lastChangeDate": "2018-10-23T09:33:41.858Z",
     "workbench": {
-      "0b42c964-195d-4674-b758-946151cae351": {
+      "template-195d-4674-b758-946151cae351": {
         "label": "File Picker 0D",
         "inputs": {},
         "inputNodes": [],
@@ -24,7 +24,7 @@
         "key": "simcore/services/dynamic/itis/file-picker",
         "version": "0.0.0"
       },
-      "418bd484-905b-4212-8108-c7cfab4f241e": {
+      "template-905b-4212-8108-c7cfab4f241e": {
         "label": "File Picker 1&2 D",
         "inputs": {},
         "inputNodes": [],
@@ -38,12 +38,12 @@
         "key": "simcore/services/dynamic/itis/file-picker",
         "version": "0.0.0"
       },
-      "Container0D": {
+      "template-container0d": {
         "label": "CC 0D",
         "inputs": {},
         "outputs": {},
         "inputNodes": [
-          "0b42c964-195d-4674-b758-946151cae351"
+          "template-195d-4674-b758-946151cae351"
         ],
         "outputNode": false,
         "position": {
@@ -51,12 +51,12 @@
           "y": 50
         }
       },
-      "Container1D": {
+      "template-container1d": {
         "label": "CC 1D",
         "inputs": {},
         "outputs": {},
         "inputNodes": [
-          "418bd484-905b-4212-8108-c7cfab4f241e"
+          "template-905b-4212-8108-c7cfab4f241e"
         ],
         "outputNode": false,
         "position": {
@@ -64,13 +64,13 @@
           "y": 300
         }
       },
-      "Container2D": {
+      "template-container2d": {
         "label": "CC 2D",
         "inputs": {},
         "outputs": {},
         "inputNodes": [
-          "418bd484-905b-4212-8108-c7cfab4f241e",
-          "Container1D"
+          "template-905b-4212-8108-c7cfab4f241e",
+          "template-container1d"
         ],
         "outputNode": false,
         "position": {
@@ -78,8 +78,8 @@
           "y": 500
         }
       },
-      "5986cf64-9f81-409d-998c-c1f04de67f8b": {
-        "label": "DBP-Clancy-Rabbit-Single-Cell solver v 0.0.2",
+      "template-9f81-409d-998c-c1f04de67f8b": {
+        "label": "DBP-Clancy-Rabbit-Single-Cell solver",
         "inputs": {
           "Na": 0,
           "Kr": 0,
@@ -88,16 +88,16 @@
           "Ligand": 0,
           "cAMKII": "WT",
           "initial_WTstates": {
-            "nodeUuid": "0b42c964-195d-4674-b758-946151cae351",
+            "nodeUuid": "template-195d-4674-b758-946151cae351",
             "output": "outFile"
           }
         },
         "inputNodes": [
-          "0b42c964-195d-4674-b758-946151cae351"
+          "template-195d-4674-b758-946151cae351"
         ],
         "outputNode": false,
         "outputs": {},
-        "parent": "Container0D",
+        "parent": "template-container0d",
         "position": {
           "x": 300,
           "y": 400
@@ -105,24 +105,24 @@
         "key": "simcore/services/comp/ucdavis/cardiac-singlecell",
         "version": "0.0.1"
       },
-      "00336089-9984-43e7-9fda-cf9625e59986": {
+      "template-9984-43e7-9fda-cf9625e59986": {
         "label": "cc-0d-viewer",
         "inputs": {
           "vm_1Hz": {
-            "nodeUuid": "5986cf64-9f81-409d-998c-c1f04de67f8b",
+            "nodeUuid": "template-9f81-409d-998c-c1f04de67f8b",
             "output": "vm_1Hz"
           },
           "all_results_1Hz": {
-            "nodeUuid": "5986cf64-9f81-409d-998c-c1f04de67f8b",
+            "nodeUuid": "template-9f81-409d-998c-c1f04de67f8b",
             "output": "allresult_1Hz"
           }
         },
         "inputNodes": [
-          "5986cf64-9f81-409d-998c-c1f04de67f8b"
+          "template-9f81-409d-998c-c1f04de67f8b"
         ],
         "outputNode": false,
         "outputs": {},
-        "parent": "Container0D",
+        "parent": "template-container0d",
         "position": {
           "x": 600,
           "y": 200
@@ -130,8 +130,8 @@
         "key": "simcore/services/dynamic/cc-0d-viewer",
         "version": "1.1.0"
       },
-      "5e548936-ee08-43f3-ab01-a58e7c49a946": {
-        "label": "DBP-Clancy-Rabbit-1-D solver v 0.0.1",
+      "template-ee08-43f3-ab01-a58e7c49a946": {
+        "label": "DBP-Clancy-Rabbit-1-D solver",
         "inputs": {
           "Na": 0,
           "Kr": 0,
@@ -143,12 +143,12 @@
           "tl": 200,
           "homogeneity": "heterogeneous",
           "initial_WTstates": {
-            "nodeUuid": "418bd484-905b-4212-8108-c7cfab4f241e",
+            "nodeUuid": "template-905b-4212-8108-c7cfab4f241e",
             "output": "outFile"
           }
         },
         "inputNodes": [
-          "418bd484-905b-4212-8108-c7cfab4f241e"
+          "template-905b-4212-8108-c7cfab4f241e"
         ],
         "outputNode": true,
         "outputs": {},
@@ -160,8 +160,8 @@
         "key": "simcore/services/comp/ucdavis/cardiac-oned",
         "version": "0.0.1"
       },
-      "c3e872c0-b105-40ce-8d33-7d501a694550": {
-        "label": "DBP-Clancy-Rabbit-2-D solver v 0.0.1",
+      "template-b105-40ce-8d33-7d501a694550": {
+        "label": "DBP-Clancy-Rabbit-2-D solver",
         "inputs": {
           "Na": 0,
           "Kr": 0,
@@ -172,21 +172,21 @@
           "tl": 200,
           "homogeneity": "heterogeneous",
           "initial_WTstates": {
-            "nodeUuid": "418bd484-905b-4212-8108-c7cfab4f241e",
+            "nodeUuid": "template-905b-4212-8108-c7cfab4f241e",
             "output": "outFile"
           },
           "fiber": {
-            "nodeUuid": "5e548936-ee08-43f3-ab01-a58e7c49a946",
+            "nodeUuid": "template-ee08-43f3-ab01-a58e7c49a946",
             "output": "fiber"
           }
         },
         "inputNodes": [
-          "418bd484-905b-4212-8108-c7cfab4f241e",
-          "Container1"
+          "template-905b-4212-8108-c7cfab4f241e",
+          "template-container1d"
         ],
         "outputNode": false,
         "outputs": {},
-        "parent": "Container2D",
+        "parent": "template-container2d",
         "position": {
           "x": 300,
           "y": 400
@@ -194,18 +194,18 @@
         "key": "simcore/services/comp/ucdavis/cardiac-twod",
         "version": "0.0.1"
       },
-      "c354690d-c9c4-47f5-a089-cc4e2eec30b3": {
+      "template-c9c4-47f5-a089-cc4e2eec30b3": {
         "label": "cc-1d-viewer",
         "inputs": {
           "ECGs": "null",
           "y_1D": "null"
         },
         "inputNodes": [
-          "5e548936-ee08-43f3-ab01-a58e7c49a946"
+          "template-ee08-43f3-ab01-a58e7c49a946"
         ],
         "outputNode": false,
         "outputs": {},
-        "parent": "Container1D",
+        "parent": "template-container1d",
         "position": {
           "x": 600,
           "y": 200
@@ -213,17 +213,17 @@
         "key": "simcore/services/dynamic/cc-1d-viewer",
         "version": "1.1.0"
       },
-      "ef9404ef-324f-46b7-825c-6f0f614c54ef": {
+      "template-324f-46b7-825c-6f0f614c54ef": {
         "label": "cc-2d-viewer",
         "inputs": {
           "ap": "null"
         },
         "inputNodes": [
-          "c3e872c0-b105-40ce-8d33-7d501a694550"
+          "template-b105-40ce-8d33-7d501a694550"
         ],
         "outputNode": false,
         "outputs": {},
-        "parent": "Container2D",
+        "parent": "template-container2d",
         "position": {
           "x": 600,
           "y": 200
