--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       - S3_BUCKET_NAME=${S3_BUCKET_NAME}
       - SMTP_HOST=${SMTP_HOST}
       - SMTP_PORT=${SMTP_PORT}
+    stdin_open: true
+    tty: true
     depends_on:
       - webclient
       - apihub
