--- a/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
+++ b/services/web/server/src/simcore_service_webserver/data/fake-template-projects.json
@@ -1,14 +1,14 @@
 [
   {
-    "projectUuid": "template-uuid-41e9-a1a7-f7d4f3a8f26b",
-    "name": "Colleen Clancy use cases",
-    "description": "All use cases: 0D, 1D, 2D",
+    "projectUuid": "template-uuid-1234-a1a7-f7d4f3a8f26b",
+    "name": "Colleen Clancy use cases: 0D",
+    "description": "Colleen Clancy use cases: 0D",
     "notes": "Empty",
     "thumbnail": "https://placeimg.com/171/96/tech/grayscale/?18.jpg",
     "owner": "Colleen Clancy",
     "collaborators": {},
-    "creationDate": "2018-10-23T09:13:13.360Z",
-    "lastChangeDate": "2018-10-23T09:33:41.858Z",
+    "creationDate": "2018-10-22T09:13:13.360Z",
+    "lastChangeDate": "2018-10-22T09:33:41.858Z",
     "workbench": {
       "template-uuid-4674-b758-946151cae351": {
         "key": "simcore/services/dynamic/itis/file-picker",
@@ -24,6 +24,70 @@
           "y": 150
         }
       },
+      "template-uuid-409d-998c-c1f04de67f8b": {
+        "key": "simcore/services/comp/ucdavis/cardiac-singlecell",
+        "version": "1.0.0",
+        "label": "DBP-Clancy-Rabbit-Single-Cell solver",
+        "inputs": {
+          "Na": 0,
+          "Kr": 0,
+          "BCL": 200,
+          "NBeats": 5,
+          "Ligand": 0,
+          "cAMKII": "WT",
+          "in_7": {
+            "nodeUuid": "template-uuid-4674-b758-946151cae351",
+            "output": "outFile"
+          }
+        },
+        "inputNodes": [
+          "template-uuid-4674-b758-946151cae351"
+        ],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 300,
+          "y": 400
+        }
+      },
+      "template-uuid-43e7-9fda-cf9625e59986": {
+        "key": "simcore/services/dynamic/cc-0d-viewer",
+        "version": "1.1.0",
+        "label": "cc-0d-viewer",
+        "inputs": {
+          "vm_1Hz": {
+            "nodeUuid": "template-uuid-409d-998c-c1f04de67f8b",
+            "output": "vm_1Hz"
+          },
+          "all_results_1Hz": {
+            "nodeUuid": "template-uuid-409d-998c-c1f04de67f8b",
+            "output": "allresult_1Hz"
+          }
+        },
+        "inputNodes": [
+          "template-uuid-409d-998c-c1f04de67f8b"
+        ],
+        "outputNode": false,
+        "outputs": {},
+        "parent": null,
+        "position": {
+          "x": 600,
+          "y": 200
+        }
+      }
+    }
+  }, {
+    "projectUuid": "template-uuid-41e9-a1a7-f7d4f3a8f26b",
+    "name": "Colleen Clancy use cases: 1D, 2D",
+    "description": "CC use cases: 1D and 2D collapsed",
+    "notes": "Empty",
+    "thumbnail": "https://placeimg.com/171/96/tech/grayscale/?18.jpg",
+    "owner": "Colleen Clancy",
+    "collaborators": {},
+    "creationDate": "2018-10-23T09:13:13.360Z",
+    "lastChangeDate": "2018-10-23T09:33:41.858Z",
+    "workbench": {
       "template-uuid-4212-8108-c7cfab4f241e": {
         "key": "simcore/services/dynamic/itis/file-picker",
         "version": "0.0.0",
@@ -36,19 +100,6 @@
         "position": {
           "x": 100,
           "y": 400
-        }
-      },
-      "template-uuid-4452-bf18-e43e6081ff25": {
-        "label": "CC 0D",
-        "inputs": {},
-        "outputs": {},
-        "inputNodes": [
-          "template-uuid-4674-b758-946151cae351"
-        ],
-        "outputNode": false,
-        "position": {
-          "x": 400,
-          "y": 50
         }
       },
       "template-uuid-4ea2-9778-2b2e0e28907a": {
