--- a/services/dy-jupyter/docker-compose.devel.yml
+++ b/services/dy-jupyter/docker-compose.devel.yml
@@ -34,6 +34,74 @@ services:
       - ./notebooks:/home/jovyan/notebooks
       - ./docker:/docker
   #--------------------------------------------------------------------
+  jupyter-scipy-notebook:
+    image: jupyter-scipy-notebook-dev
+    build:
+      target: development
+    environment:
+      - STORAGE_ENDPOINT=${STORAGE_ENDPOINT}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - APIHUB_HOST=${APIHUB_HOST}
+      - APIHUB_PORT=${APIHUB_PORT}
+      - USE_CASE_CONFIG_FILE=devel/port_config.json
+      - INIT_OPTIONS=10 60 2 space
+      - SIMCORE_NODE_BASEPATH=${SIMCORE_NODE_BASEPATH}
+    depends_on:
+      - postgres
+      - minio
+    ports:
+      - '8889:8888'
+    volumes:
+      - ../../packages/:/home/jovyan/packages
+      - ../../services/:/home/jovyan/services
+      - ./devel:/home/jovyan/devel
+      - ../../scripts/dy_services_helpers:/home/jovyan/scripts/dy_services_helpers
+      - ./notebooks:/home/jovyan/notebooks
+      - ./docker:/docker
+  #--------------------------------------------------------------------
+  jupyter-r-notebook:
+    image: jupyter-r-notebook-dev
+    build:
+      target: development
+    environment:
+      - STORAGE_ENDPOINT=${STORAGE_ENDPOINT}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - POSTGRES_ENDPOINT=${POSTGRES_ENDPOINT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - APIHUB_HOST=${APIHUB_HOST}
+      - APIHUB_PORT=${APIHUB_PORT}
+      - USE_CASE_CONFIG_FILE=devel/port_config.json
+      - INIT_OPTIONS=10 60 2 space
+      - SIMCORE_NODE_BASEPATH=${SIMCORE_NODE_BASEPATH}
+    depends_on:
+      - postgres
+      - minio
+    ports:
+      - '8890:8888'
+    volumes:
+      - ../../packages/:/home/jovyan/packages
+      - ../../services/:/home/jovyan/services
+      - ./devel:/home/jovyan/devel
+      - ../../scripts/dy_services_helpers:/home/jovyan/scripts/dy_services_helpers
+      - ./notebooks:/home/jovyan/notebooks
+      - ./docker:/docker
+  #--------------------------------------------------------------------
   apihub:
     image: services_apihub:latest
     ports:
@@ -62,6 +130,7 @@ services:
     restart: always
     depends_on:
       - postgres
+      - minio
       - apihub
   #--------------------------------------------------------------------
   postgres:
